// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingScreen when just made not visible 1`] = `
<div
  className="kogito-tooling--loading-screen"
  onTransitionEnd={[Function]}
  style={
    Object {
      "opacity": 0,
      "transition": "opacity 400ms",
    }
  }
>
  <Page
    defaultManagedSidebarIsOpen={true}
    isManagedSidebar={false}
    mainTabIndex={-1}
    onPageResize={[Function]}
    tabIndex={-1}
  >
    <Bullseye>
      <div>
        <div>
          <Spinner />
        </div>
        <Title
          headingLevel="h5"
        >
          Loading...
        </Title>
      </div>
    </Bullseye>
  </Page>
</div>
`;

exports[`LoadingScreen when not visible after fadeout delay 1`] = `<Fragment />`;

exports[`LoadingScreen when visible 1`] = `
<div
  className="kogito-tooling--loading-screen"
  onTransitionEnd={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <Page
    defaultManagedSidebarIsOpen={true}
    isManagedSidebar={false}
    mainTabIndex={-1}
    onPageResize={[Function]}
    tabIndex={-1}
  >
    <Bullseye>
      <div>
        <div>
          <Spinner />
        </div>
        <Title
          headingLevel="h5"
        >
          Loading...
        </Title>
      </div>
    </Bullseye>
  </Page>
</div>
`;
